--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1>learning git and github</h1>
   <p>Soumen Jana</p>
+  <p>Soumen Jana</p>
   <script src="script.js"></script>
 </body>
 
