--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1>learning git and github</h1>
   <p>Soumen Jana</p>
   <p>Soumen Jana</p>
+  <p>Soumen Jana</p>
   <script src="script.js"></script>
 </body>
 
